--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -10,6 +10,17 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+   <!--container-redes-sociales-->
+
+   <div class="container-redes">
+
+    <a href="https://api.whatsapp.com/send?phone=2283595532=¿Qué servicios ofrecen?" target="_blank">
+
+        <img src="/Contacto/" title="Enviar mensaje de WhatsApp" alt="">
+
+    </a>
+
+</div>
     <div id="contenedor">
         <header>
             <h1>Contacto</h1>
@@ -31,23 +42,18 @@
               
                     <ul class="nav navbar-nav navbar-right">
                       <li><a href="#"><span class="glyphicon glyphicon-user"></span> &nbsp;Iniciar Sesión</a></li>
-                      <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> &nbsp;Iniciar Sesión</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
-                      </ul>
+
                   </div>
                 </div>
               </nav>
-
         </nav>
         <section id="contenido">
             <article>
                 <div id="general">
-				<iframe class="Mapa" src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30081.69028845324!2d-96.92384918386436!3d19.53254053466784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85db31f6238ff32f%3A0x39cf63c4d2fc873c!2sAcuario!5e0!3m2!1sen!2smx!4v1604199403884!5m2!1sen!2smx" allowfullscreen ="" width="600" height="350" frameborder="0" float="left" >
+				<iframe class="Mapa" src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30081.69028845324!2d-96.92384918386436!3d19.53254053466784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85db31f6238ff32f%3A0x39cf63c4d2fc873c!2sAcuario!5e0!3m2!1sen!2smx!4v1604199403884!5m2!1sen!2smx" allowfullscreen ="" width="600" height="500" frameborder="0" float="left" >
 			</iframe>
-			<div id="nom">
+		<!--<div id="nom">
 				
 				<p class="dir">
 					Calle Lazaro Cárdenas #444<br>
@@ -56,7 +62,7 @@
 					Xalapa, Veracruz<br>
 				<h4 class="tel">Citas</h4>
 				<a href="https://api.whatsapp.com/send?phone=2283595532">WhatsApp</a>
-			</div>
+			</div> !-->
             </article>
         </section>
         <aside>
