--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -14,12 +14,12 @@
 
    <div class="container-redes">
 
-    <a href="https://api.whatsapp.com/send?phone=2283595532=¿Qué servicios ofrecen?" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=522283595532"_blank>
 
-        <img src="/Contacto/" title="Enviar mensaje de WhatsApp" alt="">
+        <img src="/Contacto/img/icon-whatsapp (1).png" title="Enviar mensaje de WhatsApp" alt="">
 
     </a>
-
+    
 </div>
     <div id="contenedor">
         <header>
