--- a/Pagina Principal/index.html
+++ b/Pagina Principal/index.html
@@ -43,7 +43,7 @@
         <li class="active"><a href="#">Inicio</a></li>
         <li><a href="#">Productos</a></li>
         <li><a href="#">Ventas</a></li>
-        <li><a href="/Proyecto-Tapiceria/Contacto/contacto.html">Contactar</a></li>
+        <li><a href="/Contacto/contacto.html">Contactar</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mi cuenta</a></li>
