--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -7,8 +7,10 @@
    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
   <link rel="stylesheet" href="/Contacto/css/estilos.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="css/estilos.css" rel="stylesheet" type="text/css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src='main.js'></script>
 </head>
 <body>
    <!--container-redes-sociales-->
@@ -54,11 +56,9 @@
               </nav>
         </nav>
         <section id="contenido">
-            <article>
-                <div id="general">
+          <div id="general">
 				<iframe class="Mapa" src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30081.69028845324!2d-96.92384918386436!3d19.53254053466784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85db31f6238ff32f%3A0x39cf63c4d2fc873c!2sAcuario!5e0!3m2!1sen!2smx!4v1604199403884!5m2!1sen!2smx" allowfullscreen ="" width="600" height="500" frameborder="0" float="left" >
 			</iframe>
-            </article>
         </section>
         <aside>
             <form action="mailto:etapiceriaacuario@gmail.com" method="post" name="formal">
@@ -72,7 +72,7 @@
             <p>
             <input type="text" name="Nombre" style="width: 300px; height: 250px;"></p>
 
-              <input name="Submit" style="background-color: white; font-size: 20px;  width: 90px; margin-top: 10px;" type="submit" value="Enviar" />
+              <input name="Submit" style="color: black; font-size: 20px;  width: 90px; margin-top: 10px;" type="submit" value="Enviar" />
           </form>
  
         </aside>
