--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   
    <title>Contacto</title>
-   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-  <link rel="stylesheet" href="/Contacto/css/estilos.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link href="css/estilos.css" rel="stylesheet" type="text/css">
+   <meta charset="utf-8">
+
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="/Contacto/css/estilos.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+   <link href="css/estilos.css" rel="stylesheet" type="text/css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src='main.js'></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
    <!--container-redes-sociales-->
@@ -72,7 +73,7 @@
             <p>
             <input type="text" name="Nombre" style="width: 300px; height: 250px;"></p>
 
-              <input name="Submit" style="color: black; font-size: 20px;  width: 90px; margin-top: 10px;" type="submit" value="Enviar" />
+              <input name="Submit" style="color: black; font-size: 20px;  width: 90px; margin-top: 10px; margin-top: 20px; padding: 5px; float: right;;" type="submit" value="Enviar" />
           </form>
  
         </aside>
