--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -42,14 +42,12 @@
                   <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                       <li class="active"><a href="/Pagina Principal/index.html">Inicio</a></li>
-                      <li><a href="#">Products</a></li>
-                      <li><a href="#">Deals</a></li>
-                      <li><a href="#">Stores</a></li>
-                      <li><a href="/Contacto/contacto.html">Contacto</a></li>
+                      <li><a href="/Producto/">Productos</a></li>
+                      <li><a href="/ventas/index.html">Ventas</a></li>
+                      <li><a href="/Contacto/contacto.html">Contactar</a></li>
                     </ul>
-              
                     <ul class="nav navbar-nav navbar-right">
-                      <li><a href="#"><span class="glyphicon glyphicon-user"></span> &nbsp;Iniciar Sesión</a></li>
+                      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Iniciar sesión</a></li>
                     </ul>
 
                   </div>
