--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/Contacto/css/estilos.css">
-    <title>Document</title>
+    <title>Contacto</title>
+    <link rel="shortcut icon" href="/Contacto/img/logo_size.ico">
 </head>
 
 <body>
     <article>
         <header>
             <section>
-                <h1><b>Tapiceria Acuario</b></h1>
+                
+                <!-- <img src="/Contacto/img/logo_size.jpg"> -->
             </section>
             <div class="conte">
                 <p>Contacto</p>
@@ -41,9 +43,10 @@
     <section id="contenido">
         <div id="delimitador">
             <div class="contenedor">
-            <iframe class="Mapa"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1880.103216797884!2d-96.9075374528414!3d19.5327489540835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85db31f6238ff32f%3A0x39cf63c4d2fc873c!2sAcuario!5e0!3m2!1ses!2smx!4v1605156700925!5m2!1ses!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
+                <iframe class="Mapa"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1880.103216797884!2d-96.9075374528414!3d19.5327489540835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85db31f6238ff32f%3A0x39cf63c4d2fc873c!2sAcuario!5e0!3m2!1ses!2smx!4v1605156700925!5m2!1ses!2smx"
+                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
             </iframe>
     </section>
     <aside>
@@ -60,25 +63,25 @@
         </form>
     </aside>
     <div>
-    <footer>
-        <h1>Dirección</h1>
-        <p class="dir">Calle Lazaro Cárdenas #444, Colonia Pomona, CP: 91049 Xalapa, Veracruz</p>
-        <p></p>
-        <h2>Contacto Tapiceros</h2>
-        <p class="dir"></p>
-        <p>Eduardo Lopez</p> 
-        <a href="https://api.whatsapp.com/send?phone=522282548772">Telefono</a>
-        <a href="mailto:etapiceriaacuario@gmail.com">Otro Correo</a>
-        <p>Jesús</p>
-        <a href="https://api.whatsapp.com/send?phone=522281981255">Telefono</a>
-        <a href="mailto:etapiceriaacuario@gmail.com">etapiceriaacuario@gmail.com</a>
-        <p>Pablo</p>
-        <a href="https://api.whatsapp.com/send?phone=522288522126">Telefono</a>
-        <a href="mailto:etapiceriaacuario@gmail.com">Otro Correo</a>
-    <p></p>
-    <p></p>
-    </footer>
-</div>
+        <footer>
+            <h1>Dirección</h1>
+            <p class="dir">Calle Lazaro Cárdenas #444, Colonia Pomona, CP: 91049 Xalapa, Veracruz</p>
+            <p></p>
+            <h2>Contacto Tapiceros</h2>
+            <p class="dir"></p>
+            <p>Eduardo Lopez</p>
+            <a href="https://api.whatsapp.com/send?phone=522282548772">Telefono</a>
+            <a href="mailto:etapiceriaacuario@gmail.com">Otro Correo</a>
+            <p>Jesús</p>
+            <a href="https://api.whatsapp.com/send?phone=522281981255">Telefono</a>
+            <a href="mailto:etapiceriaacuario@gmail.com">etapiceriaacuario@gmail.com</a>
+            <p>Pablo</p>
+            <a href="https://api.whatsapp.com/send?phone=522288522126">Telefono</a>
+            <a href="mailto:etapiceriaacuario@gmail.com">Otro Correo</a>
+            <p></p>
+            <p></p>
+        </footer>
+    </div>
 </body>
 
 </html>
