--- a/Pagina Principal/index.html
+++ b/Pagina Principal/index.html
@@ -2,81 +2,93 @@
 <html lang="es">
 <head>
   <title>Tapicería Acuario </title>
-  <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
- 
- <style>
-    body {
-      background-image: url('img/Pecera.gif');
-      background-repeat: no-repeat;
-      background-attachment: fixed; 
-      background-size: 100% 100%;
-    }
-    </style>
-    
+  <link rel="shortcut icon" href="img/SignoAcuario.gif" type="image/x-icon">
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" href="/CSS/estilos.css">
+
+
+<!-- Nombre de la tapicería y las secciones de navegación-->
 </head>
 <body>
-
-  <div class="container text-center">
-    <h1 style="font-size:500%;"> <b>TAPICERÍA ACUARIO</b></h1>      
-    <p style="color: white;"> <b>Ofrece productos de buena calidad y el mejor servicio.</b> </p>
+<article>
+  <header>
+      <section>
+      <h1><b>Tapicería Acuario</b></h1>
+  </section>
+  <div class="conte">
+          <a href="">Inicio</a>
+          <a href="">Catálogo</a>
+          <a href="">Contacto</a>
+          <a href="">Iniciar sesión</a>
   </div>
+
+  </header>
+
+</article>
+
+<!-- Contedor imágenes de los trabajos que ofrece la tapicería-->
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/Autos/Autos.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/Autos/img12.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/Autos/img3.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/Hogar/Hogar.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/Hogar/3.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/Hogar/1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/sillas/Otros.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/sillas/s1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/sillas/s2.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="/Pagina Principal/index.html">Acuario</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/Pagina Principal/index.html">Inicio</a></li>
-        <li><a href="/Producto/">Productos</a></li>
-        <li><a href="/ventas/index.html">Ventas</a></li>
-        <li><a href="/Contacto/contacto.html">Contactar</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Iniciar sesión</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div class="container">    
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">AUTOS</div>
-        <div class="panel-body"><img src="img/Asientos/img4.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">PUERTAS, ASIENTOS. ETC.</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-danger">
-        <div class="panel-heading">HOGAR</div>
-        <div class="panel-body"><img src="img/Muebles/1537496621459.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">SILLAS, MUEBLES, ETC.</div>
-      </div>
-    </div>
-    <div class="col-sm-4"> 
-      <div class="panel panel-success">
-        <div class="panel-heading">OTROS</div>
-        <div class="panel-body"><img src="img/sillas/1531624679128.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">...</div>
-      </div>
-    </div>
-  </div>
-</div><br>
+    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    
 
 </body>
 </html>
