--- a/Contacto/usuarioReg/usuarioR.html
+++ b/Contacto/usuarioReg/usuarioR.html
@@ -16,7 +16,7 @@
         <div class="conte">
             <p>Contacto</p>
             <a href="/Pagina Principal/index.html">Inicio</a>
-            <a href="/Producto/Producto">Productos</a>
+            <a href="/Catalogo/Proyecto MD/catalogo.html">Catálogo</a>
             <!--<a href="/ventas/index.html">Ventas</a>-->
             <a href="/Contacto/contacto.html">Contacto</a>
             <a href="">Iniciar sesión</a>
