--- a/Pagina Principal/index.html
+++ b/Pagina Principal/index.html
@@ -9,7 +9,7 @@
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<link rel="stylesheet" href="/CSS/estilos.css">
+<link rel="stylesheet" href="/Pagina Principal/CSS/estilos.css">
 
 
 <!-- Nombre de la tapicería y las secciones de navegación-->
@@ -21,10 +21,10 @@
       <h1><b>Tapicería Acuario</b></h1>
   </section>
   <div class="conte">
-          <a href="">Inicio</a>
-          <a href="">Catálogo</a>
-          <a href="">Contacto</a>
-          <a href="">Iniciar sesión</a>
+          <a href="/Pagina Principal/index.html">Inicio</a>
+          <a href="/Catalogo/Proyecto MD/catalogo.html">Catálogo</a>
+          <a href="/Contacto/contacto.html">Contacto</a>
+          <a href="/">Iniciar sesión</a>
   </div>
 
   </header>
