--- a/Catalogo/html/catalogo.html
+++ b/Catalogo/html/catalogo.html
@@ -9,7 +9,6 @@
     <title>Catalogo</title>
     <link href="/Catalogo/css/catalogo.css" rel="stylesheet" type="text/css">
     <link href="/Catalogo/css/barra.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body>
@@ -26,25 +25,18 @@
             </div>
         </header>
     </article>
-
     <div class="contenedor">
-
         <div class="tabla1">
-
             <a href="/Catalogo/html/autos.html">AUTOS</a>
         </div>
-
         <div class="tabla2">
-
             <a href="/Catalogo/html/hogar.html">HOGAR</a>
         </div>
-
         <div class="tabla3">
-
             <a href="/Catalogo/html/otros.html">OTROS</a>
-
-
-
+        </div>
+        <div class="tabla4">
+            <a href="listaprecios.html">Trabajos realizados</a>
         </div>
 </body>
 
