Enlazando apartados de las paginas

--- a/Administrador/index.html
+++ b/Administrador/index.html
@@ -17,10 +17,9 @@
         </section>
         <div class="conte">
             <p>Lista de precios estimada</p>
-                <a href="">Inicio</a>
-                <a href="catalogo.html">Catálogo</a>
-                <a href="">Contacto</a>
-                <a href="">Iniciar sesión</a>
+            <a href="/Administrador/index.html">Lista de precios</a>
+            <a href="/Administrador/vistaCitas.html"> Agenda</a>
+            <a href="">Cerrar sesión</a>
         </div>
         </header>
     </article>  
