--- a/Administrador/vistaCitas.html
+++ b/Administrador/vistaCitas.html
@@ -20,10 +20,8 @@
     <header>
         <div class="conte">
             <p>Registro de citas</p>
-            <a href="/Pagina Principal/index.html">Inicio</a>
-            <a href=""> Producto</a>
-            <!--<a href="/ventas/index.html">Ventas</a>-->
-            <a href="/Contacto/Administrador/vistaCitas.html">Agenda</a>
+            <a href="/Administrador/vistaCitas.html">Agenda</a>
+            <a href="/Administrador/index.html"> Lista de precios</a>
             <a href="">Cerrar sesión</a>
         </div>
     </header>
