--- a/login/html/indexU.html
+++ b/login/html/indexU.html
@@ -6,7 +6,7 @@
     <title>Login</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="/login/style.css">
+    <link rel="stylesheet" href="/login/css/style.css">
     </div>
 
 </head>
@@ -80,7 +80,7 @@
             firebase.initializeApp(firebaseConfig);
             firebase.analytics();
         </script>
-        <script src="/login/app.js"></script>
+        <script src="/login/js/app.js"></script>
     </aside>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
