--- a/Pagina Principal/index.html
+++ b/Pagina Principal/index.html
@@ -24,7 +24,7 @@
           <a href="/Pagina Principal/index.html">Inicio</a>
           <a href="/Catalogo/html/catalogo.html">Catálogo</a>
           <a href="/Contacto/contacto.html">Contacto</a>
-          <a href="/login/indexU.html">Iniciar sesión</a>
+          <a href="/login/html/indexU.html">Iniciar sesión</a>
   </div>
 
   </header>
