--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -18,7 +18,7 @@
             <a href="/Pagina Principal/index.html">Inicio</a>
             <a href="/Catalogo/html/catalogo.html">Catálogo</a>
             <a href="/Contacto/contacto.html">Contacto</a>
-            <a href="/login/indexU.html">Iniciar sesión</a>
+            <a href="/login/html/indexU.html">Iniciar sesión</a>
         </div>
     </header>
     <!--     CAJA DONDE SE ENCUENTRA EL MAPA CON LA UBICACIÓN DE LA TAPICERIA    -->
