--- a/usuarioReg/usuarioR.html
+++ b/usuarioReg/usuarioR.html
@@ -18,7 +18,7 @@
             <a href="/Pagina Principal/index.html">Inicio</a>
             <a href="/Catalogo/Proyecto MD/catalogo.html">Catálogo</a>
             <a href="/Contacto/contacto.html">Contacto</a>
-            <a href="/login/indexU.html">Iniciar sesión</a>
+            <a href="/login/indexU.html">Cerrar Sesión</a>
         </div>
     </header>
     <!--IMAGEN Y NUMEROS DE LOS CONTACTOS DE WHATSAPP, LAS BURBUJAS FLOTANTES-->
