--- a/Catalogo/html/autos.html
+++ b/Catalogo/html/autos.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <title>Autos_Tapicería_Acuario</title>
+    <title>Autos</title>
     <link rel="shortcut icon" href="/Catalogo/img/img/signoacuario.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +22,7 @@
                 <a href="/Pagina Principal/index.html">Inicio</a>
                 <a href="catalogo.html">Catálogo</a>
                 <a href="/Contacto/contacto.html">Contacto</a>
+                <a href="/ATD/html/visu_acua.html">Lista de precios</a>
                 <a href="/login/indexU.html">Iniciar sesión</a>
             </div>
         </header>
