--- a/Catalogo/html/listaprecios.html
+++ b/Catalogo/html/listaprecios.html
@@ -2,8 +2,8 @@
 <html lang="es">
 
 <head>
-    <title>Autos_Tapicería_Acuario</title>
-    <link rel="shortcut icon" href="img/signoacuario.png" type="image/x-icon">
+    <title>Trabajos Realizados</title>
+    <link rel="shortcut icon" href="/Catalogo/img/img/signoacuario.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="barra.css" rel="stylesheet" type="text/css">
@@ -20,10 +20,11 @@
             <div class="conte">
                 <p>Trabajos Realizados</p>
                 <a href="catalogo.html">Volver</a>
-                <a href="">Inicio</a>
+                <a href="/Pagina Principal/index.html">Inicio</a>
                 <a href="catalogo.html">Catálogo</a>
-                <a href="">Contacto</a>
-                <a href="">Iniciar sesión</a>
+                <a href="/Contacto/contacto.html">Contacto</a>
+                <a href="/ATD/html/visu_acua.html">Lista de precios</a>
+                <a href="/login/html/indexU.html">Iniciar sesión</a>
             </div>
         </header>
         <div class="galeria">
