--- a/Administrador/index.html
+++ b/Administrador/index.html
@@ -19,7 +19,7 @@
             <p>Lista de precios estimada</p>
             <a href="/Administrador/index.html">Lista de precios</a>
             <a href="/Administrador/vistaCitas.html"> Agenda</a>
-            <a href="">Cerrar sesión</a>
+            <a href="/Pagina Principal/index.html">Cerrar sesión</a>
         </div>
         </header>
     </article>  
