--- a/Catalogo/html/hogar.html
+++ b/Catalogo/html/hogar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Hogar_Tapicería_Acuario</title>
+    <title>Hogar</title>
        <link rel="shortcut icon" href="/Catalogo/img/img/signoacuario.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +20,7 @@
                 <a href="/Pagina Principal/index.html">Inicio</a>
                 <a href="catalogo.html">Catálogo</a>
                 <a href="/Contacto/contacto.html">Contacto</a>
+                <a href="/ATD/html/visu_acua.html">Lista de precios</a>
                 <a href="/login/indexU.html">Iniciar sesión</a>
         </div>
         </header>
