--- a/ATD/html/visu_acua.html
+++ b/ATD/html/visu_acua.html
@@ -22,8 +22,9 @@
                 <a href="/Pagina Principal/index.html">Inicio</a>
                 <a href="/Catalogo/html/catalogo.html">Catálogo</a>
                 <a href="/Contacto/contacto.html">Contacto</a>
-                <a href="/ATD/html/visu_acua.html">Lista de precios</a>
-                <a href="/login/html/indexU.html">Iniciar sesión</a>
+                <a href="/ATD/html/visu_acua.html">Listado de precios</a>
+                <a id="log" href="/login/html/indexU.html">Iniciar sesión</a>
+                <a id="cerrar" onclick="cerrarSesion()" style="display:none" href="/Pagina Principal/index.html">Cerrra Sesión</a> 
             </div>
         </header>
     </article>
