--- a/Administrador/vistaCitas.html
+++ b/Administrador/vistaCitas.html
@@ -22,7 +22,7 @@
             <p>Registro de citas</p>
             <a href="/Administrador/index.html"> Lista de precios</a>
             <a href="/Administrador/vistaCitas.html">Agenda</a>
-            <a href="">Cerrar sesión</a>
+            <a href="/Pagina Principal/index.html">Cerrar sesión</a>
         </div>
     </header>
     <section id="contenido">
