--- a/Catalogo/html/catalogo.html
+++ b/Catalogo/html/catalogo.html
@@ -21,8 +21,7 @@
                 <a href="/Pagina Principal/index.html">Inicio</a>
                 <a href="catalogo.html">Catálogo</a>
                 <a href="/Contacto/contacto.html">Contacto</a>
-                <a href="/ATD/html/visu_acua.html">Lista de precios</a>
-                <a href="/login/indexU.html">Iniciar sesión</a>
+                <a href="/ATD/html/visu_acua.html">Listado de precios</a>
             </div>
         </header>
     </article>
