--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -16,10 +16,9 @@
         <div class="conte">
             <p>Contacto</p>
             <a href="/Pagina Principal/index.html">Inicio</a>
-            <a href="/Catalogo/Proyecto MD/catalogo.html">Catálogo</a>
+            <a href="/Catalogo/html/catalogo.html">Catálogo</a>
             <a href="/Contacto/contacto.html">Contacto</a>
-            <a href="/ATD/html/visu_acua.html">Articulos</a>
-            <a href="/login/html/indexU.html">Iniciar sesion</a>
+            <a href="/ATD/html/visu_acua.html">Listado de precios</a>
         </div>
     </header>
     <!--IMAGEN Y NUMEROS DE LOS CONTACTOS DE WHATSAPP, LAS BURBUJAS FLOTANTES-->
