--- a/Pagina Principal/index.html
+++ b/Pagina Principal/index.html
@@ -27,8 +27,7 @@
         <a href="/Pagina Principal/index.html">Inicio</a>
         <a href="/Catalogo/html/catalogo.html">Catálogo</a>
         <a href="/Contacto/contacto.html">Contacto</a>
-        <a href="/ATD/html/visu_acua.html">Articulos</a>
-        <a href="/login/html/indexU.html">Iniciar sesión</a>
+        <a href="/ATD/html/visu_acua.html">Listado de precios</a>
       </div>
 
     </header>
