--- a/login/html/indexU.html
+++ b/login/html/indexU.html
@@ -37,8 +37,10 @@
                                 <h2 class="modal-title" id="exampleModalLabel">Registro</h2>
                             </div>
                             <div class="modal-body">
+                                <a>Email</a>
                                 <input id="email" type="email" placeholder="Ingrese email" class="form-control">
                                 <div class="mt-2"></div>
+                                <a>Contraseña</a>
                                 <input id="contrasena" type="password" placeholder="Ingresa contraseña"
                                     class="form-control">
                             </div>
