--- a/login/html/indexU.html
+++ b/login/html/indexU.html
@@ -15,10 +15,10 @@
     <aside>
         <main>
             <div class="for">
-                <h2>Inicio de sesión</h2>
-                <p class="titulos">Email</p>
+                <h2 style="color: black; font-size: 36px;">Inicio de sesión</h2>
+                <p style="color: black; font-size: 16px;" class="titulos">Email</p>
                 <input id="email2" type="email" placeholder="Ingrese email" required> 
-                <p class="tit">Contraseña</p>
+                <p class="tit" style="color: black; font-size: 16px;">Contraseña</p>
                 <input id="contrasena2" type="password" placeholder="Ingresa contraseña" required>
                 <p></p>
                 <button type="button" class="btn btn-secondary" value="Acceder" onclick="ingreso()">Acceder</button>
@@ -37,10 +37,10 @@
                                 <h2 class="modal-title" id="exampleModalLabel">Registro</h2>
                             </div>
                             <div class="modal-body">
-                                <a>Email</a>
+                                <a style="color: black; font-size: 16px;">Email</a>
                                 <input id="email" type="email" placeholder="Ingrese email" class="form-control">
                                 <div class="mt-2"></div>
-                                <a>Contraseña</a>
+                                <a style="color: black; font-size: 16px;">Contraseña</a>
                                 <input id="contrasena" type="password" placeholder="Ingresa contraseña"
                                     class="form-control">
                             </div>
